--- a/src/app/components/liderazgo/liderazgo.component.html
+++ b/src/app/components/liderazgo/liderazgo.component.html
@@ -42,5 +42,8 @@
 
 
   <br />
-  <button mat-stroked-button color="primary" (click)="regresarDashboard()">Regresar</button>
+<div class="footer">
+  <button type="button" class="sam-stroked" (click)="regresarDashboard()">Regresar</button>
+</div>
+
 </div>
