--- a/src/app/components/certificados/certificados.component.html
+++ b/src/app/components/certificados/certificados.component.html
@@ -11,22 +11,26 @@
   </div>
 
   <div class="table">
-    <table mat-table [dataSource]="filtered">
+    <table mat-table [dataSource]="dataSource">
+      <!-- MIEMBRO -->
       <ng-container matColumnDef="member">
         <th mat-header-cell *matHeaderCellDef>Miembro</th>
         <td mat-cell *matCellDef="let r">{{ r.miembro || '-' }}</td>
       </ng-container>
 
+      <!-- TIPO -->
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef>Tipo de Certificado</th>
         <td mat-cell *matCellDef="let r">{{ r.tipo }}</td>
       </ng-container>
 
+      <!-- FECHA -->
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef>Fecha Expedición</th>
         <td mat-cell *matCellDef="let r">{{ r.fecha | date:'dd/MM/yyyy' }}</td>
       </ng-container>
 
+      <!-- ACCIONES -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let r">
@@ -35,12 +39,23 @@
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="['member','type','date','actions']"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['member','type','date','actions']"></tr>
+      <!-- FILAS -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
   </div>
 
-  <div class="footer">
-    <button mat-stroked-button color="primary" (click)="back()">Regresar</button>
-  </div>
+  <!-- PAGINADOR (5 fijo) -->
+  <mat-paginator
+    class="certs__paginator"
+    [length]="dataSource.data.length"
+    [pageSize]="5"
+    [pageIndex]="0"
+    hidePageSize="true">
+  </mat-paginator>
+
+<div class="footer">
+  <button type="button" class="sam-stroked" (click)="back()">Regresar</button>
+</div>
+
 </div>
