--- a/src/app/components/finanzas/finanzas.component.html
+++ b/src/app/components/finanzas/finanzas.component.html
@@ -140,7 +140,10 @@
       </div>
     </mat-tab>
   </mat-tab-group>
-  <div class="miembros__footer">
-    <button mat-stroked-button color="primary" (click)="back()">Regresar</button>
-  </div>
+<div class="miembros__footer">
+  <button mat-stroked-button color="primary" class="btn-back" (click)="back()">
+    <span class="btn-back__label">Regresar</span>
+  </button>
+</div>
+
 </div>
