--- a/src/app/components/planificacion/planificacion-home/planificacion-home.component.html
+++ b/src/app/components/planificacion/planificacion-home/planificacion-home.component.html
@@ -25,8 +25,12 @@
       </div>
     </div>
 
-    <div class="footer">
-      <button mat-stroked-button color="primary" (click)="regresar()">Regresar</button>
-    </div>
+<div class="footer">
+  <button type="button" class="sam-stroked" (click)="regresar()">Regresar</button>
+</div>
+
+
+
+
   </div>
 </div>
