Se modifican estilos de boton regresar
Se modifican estilos de boton regresar

--- a/src/app/components/finanzas/dialogs/dialog-diezmos/dialog-diezmos.component.html
+++ b/src/app/components/finanzas/dialogs/dialog-diezmos/dialog-diezmos.component.html
@@ -81,7 +81,8 @@
     </table>
   </div>
 
-  <div class="footer">
-    <button mat-stroked-button color="primary" (click)="close()">Regresar</button>
-  </div>
+<div class="footer">
+  <button type="button" class="sam-stroked" (click)="close()">Regresar</button>
+</div>
+
 </div>
