--- a/src/app/components/miembros-form/miembros-form.component.html
+++ b/src/app/components/miembros-form/miembros-form.component.html
@@ -31,10 +31,10 @@
           <mat-error *ngIf="hasError('telefono','pattern')">Formato inválido</mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="col-12">
+        <!-- <mat-form-field appearance="outline" class="col-12">
           <mat-label>Número de DPI</mat-label>
           <input matInput formControlName="dpi" />
-        </mat-form-field>
+        </mat-form-field> -->
 
         <mat-form-field appearance="outline" class="col-12">
           <mat-label>Dirección</mat-label>
