--- a/src/app/components/miembros-home/miembros-home.component.html
+++ b/src/app/components/miembros-home/miembros-home.component.html
@@ -34,20 +34,30 @@
       <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row">
-          <button
-            mat-raised-button
-            class="btn btn--primary btn--sma"
-            (click)="verFicha(row.id, row.nombre)">
-            Ver ficha
-          </button>
+          <div class="acciones-cell">
+            <button
+              mat-raised-button
+              class="btn btn--primary btn--sma"
+              (click)="verFicha(row.id, row.nombre)">
+              Ver ficha
+            </button>
 
-          <button
-            mat-raised-button
-            class="btn btn--accent btn--sma"
-            *ngIf="esAdministrador()"
-            (click)="crearUsuarioPara(row)">
-            Crear usuario
-          </button>
+            <button
+              mat-raised-button
+              class="btn btn--accent btn--sma"
+              *ngIf="esAdministrador()"
+              (click)="crearUsuarioPara(row)">
+              Crear usuario
+            </button>
+
+            <button
+              mat-stroked-button
+              color="primary"
+              class="btn btn--sma"
+              (click)="editar(row)">
+              Editar
+            </button>
+          </div>
         </td>
       </ng-container>
 
@@ -63,7 +73,7 @@
     [length]="dataSource.data.length"
     [pageSize]="5"
     [pageIndex]="0"
-    hidePageSize="true">
+    [hidePageSize]="true">
   </mat-paginator>
 
   <!-- FOOTER -->
