--- a/src/app/components/miembros-home/miembros-home.component.html
+++ b/src/app/components/miembros-home/miembros-home.component.html
@@ -35,27 +35,17 @@
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
         <td mat-cell *matCellDef="let row">
           <div class="acciones-cell">
-            <button
-              mat-raised-button
-              class="btn btn--primary btn--sma"
-              (click)="verFicha(row.id, row.nombre)">
+            <button mat-raised-button class="btn btn--primary btn--sma" (click)="verFicha(row.id, row.nombre)">
               Ver ficha
             </button>
 
-            <button
-              mat-raised-button
-              class="btn btn--accent btn--sma"
-              *ngIf="esAdministrador()"
-              (click)="crearUsuarioPara(row)">
-              Crear usuario
+            <button mat-stroked-button color="primary" class="btn btn--sma" (click)="editar(row)">
+              Editar
             </button>
 
-            <button
-              mat-stroked-button
-              color="primary"
-              class="btn btn--sma"
-              (click)="editar(row)">
-              Editar
+            <button mat-raised-button class="btn btn--accent btn--sma" *ngIf="esAdministrador()"
+              (click)="crearUsuarioPara(row)">
+              Crear usuario
             </button>
           </div>
         </td>
@@ -68,11 +58,7 @@
   </div>
 
   <!-- PAGINADOR -->
-  <mat-paginator
-    class="miembros__paginator"
-    [length]="dataSource.data.length"
-    [pageSize]="5"
-    [pageIndex]="0"
+  <mat-paginator class="miembros__paginator" [length]="dataSource.data.length" [pageSize]="5" [pageIndex]="0"
     [hidePageSize]="true">
   </mat-paginator>
 
